# advent-of-code-2023

./: .gitignore  .ocamlformat  README.md  advent_of_code_2023.opam  dune-project
inputs/: day01.txt
lib/: dune
lib/day01/: day01.ml
lib/day02/: day02.ml
lib/day03/: day03.ml
lib/day04/: day04.ml
lib/day05/: day05.ml
lib/day06/: day06.ml
lib/day07/: day07.ml
lib/day08/: day08.ml
lib/day09/: day09.ml
lib/utils/: file_utils.ml
