(lang dune 3.11)

(name advent_of_code_2023)

(generate_opam_files true)

(source
 (github lordthorzonus/advent-of-code-2023))

(authors "Juuso Leinonen")

(maintainers "Juuso Leinonen")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent_of_code_2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
